<resources>
    <string name="app_name">SafePath</string>
    <string name="logo_description">SafePath logo</string>
    <string name="safe_route_guidance">Safe Route Guidance</string>
    <string name="threat_detection">Threat Detection</string>
    <string name="voice_activation">Voice-Activated Signal</string>
    <string name="settings">Settings</string>
    <string name="trusted_contacts">Trusted Contacts</string>
    <string name="google_maps_key">AIzaSyAThqLCPhb7sOz1-OT1EXvb_7FfsjlesoQ</string>
    <string name="share_location">Share Location</string>
    <string name="view_safe_zones">View Safe Zones</string>
</resources>